<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainScreen">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        android:contentDescription="@string/bubble_top"
        android:src="@drawable/background_top"
        app:layout_constraintBottom_toBottomOf="@+id/heart_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageButton
        android:id="@+id/logout_bottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@color/app_red"
        android:contentDescription="@string/main_ic_logout"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <ImageView
        android:id="@+id/bottom_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:contentDescription="@string/bubble_bottom"
        android:src="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heart_rate">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/heart_rate"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_heart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/main_ic_heart_beat"
                android:src="@drawable/heart_beat"
                app:layout_constraintEnd_toEndOf="@id/first_card"
                app:layout_constraintStart_toStartOf="@id/first_card"
                app:layout_constraintTop_toTopOf="@id/first_card">

            </ImageView>

            <TextView
                android:id="@+id/heart_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firacode_semibold"
                android:gravity="center"
                android:text="@string/main_bpm"
                android:textColor="@color/app_orange"
                android:textSize="90sp"
                app:layout_constraintStart_toStartOf="@id/first_card"
                app:layout_constraintTop_toBottomOf="@id/img_heart"

                />

            <TextView
                android:id="@+id/heart_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/firacode_light"
                android:gravity="center"
                android:text="@string/main_bpm_title"
                android:textColor="@color/app_blue"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/heart_value"
                app:layout_constraintStart_toStartOf="@id/first_card"

                />

            <TextView
                android:id="@+id/graph_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/firacode_regular"
                android:text="@string/main_graph_title"
                android:textColor="@color/app_yellow"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/first_card"
                app:layout_constraintTop_toBottomOf="@id/heart_text"

                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/ecg_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contextClickable="false"
                app:layout_constraintStart_toStartOf="@id/first_card"
                app:layout_constraintTop_toBottomOf="@id/graph_title"

                >

            </com.github.mikephil.charting.charts.LineChart>

            <androidx.cardview.widget.CardView
                android:id="@+id/custom_button_start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/app_orange"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ecg_chart">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/background_start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_orange"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </View>

                    <TextView
                        android:id="@+id/text_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/firacode_semibold"
                        android:padding="10dp"
                        android:text="@string/main_timer_start"
                        android:textColor="@color/app_yellow"
                        android:textSize="14sp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </TextView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/custom_button_timer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/app_orange"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ecg_chart">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/firacode_regular"
                        android:text="@string/main_timer_txt"
                        android:textColor="@color/app_yellow"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </TextView>

                    <View
                        android:id="@+id/background_imgAdd"
                        android:layout_width="55dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/app_yellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_timer"
                        app:layout_constraintTop_toTopOf="parent">


                    </View>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/main_ic_add_time"
                        android:minHeight="50dp"
                        android:src="@drawable/ic_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/background_imgAdd"
                        app:layout_constraintStart_toEndOf="@+id/text_timer"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/custom_button_ready"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="@color/app_orange"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ecg_chart">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/background_ready"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_yellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </View>

                    <TextView
                        android:id="@+id/text_ready"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/firacode_semibold"
                        android:padding="10dp"
                        android:text="@string/main_timer_ready"
                        android:textColor="@color/app_orange"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                    </TextView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart_rate">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bpm_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:background="@color/white"
                android:contentDescription="@string/ic_bpm_screen"
                android:src="@drawable/bar_graph">

            </ImageView>

            <ImageView
                android:id="@+id/eck_chart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="55dp"
                android:background="@color/white"
                android:contentDescription="@string/ic_main_screen"
                android:src="@drawable/heartbeat">

            </ImageView>

            <ImageView
                android:id="@+id/health_api"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="45dp"
                android:background="@color/white"
                android:contentDescription="@string/ic_health_screen"
                android:src="@drawable/lifestyle">

            </ImageView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/back_language_icon"
        app:layout_constraintBottom_toBottomOf="@id/english_logo"
        app:layout_constraintEnd_toEndOf="@id/romanian_logo"
        app:layout_constraintStart_toStartOf="@id/english_logo"
        app:layout_constraintTop_toTopOf="@id/english_logo" />

    <ImageView
        android:id="@+id/english_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/english_logo"
        android:src="@drawable/english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/romanian_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:contentDescription="@string/romanian_logo"
        android:src="@drawable/romanian"
        app:layout_constraintStart_toEndOf="@id/english_logo"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>

